# CS1470-final-project

./: .gitignore  EXPERIMENT-RUNBOOK.md  FINAL-PROJECT-ROADMAP.md  IMPLEMENTATION-PLAN.md  PHASE-3-6-PLAN.md  PROJECT-AUDIT.md  README.md  SESSION-SUMMARY.md  VISUALIZATION-GUIDE.md  VISUALIZATION-RESULTS.md  VISUALIZATION-SUMMARY.md  analyze_results.py  compare_strategies.py  diagnose_policy_behavior.py  pyproject.toml  report_oscar_rewrite.tex  run_matrix.sh  visualize_game.py  visualize_imagination.py
artifacts/: final_summary.csv
artifacts/madreamer-shared-smoke/: best.pt  latest.pt  metrics.json
artifacts/pommerman-phase1/: best.pt  latest.pt  metrics.json
artifacts/pommerman-shared/: best.pt  latest.pt  metrics.json
artifacts/ppo-baseline-smoke/: best.pt  latest.pt  metrics.json
configs/: base.yaml  independent.yaml  independent_study.yaml  opponent_aware.yaml  opponent_aware_study.yaml  pommerman_independent.yaml  pommerman_opponent_aware.yaml  pommerman_phase1.yaml  pommerman_ppo.yaml  pommerman_shared.yaml  ppo.yaml  ppo_dev.yaml  ppo_smoke.yaml  shared.yaml  shared_dev.yaml  shared_smoke.yaml  shared_study.yaml  team_shared_smoke.yaml
configs/compute/: opponent_aware_h3_multi_64k.yaml  (+10 more)
docs/: pommerman-background.md  runbook.md  scaffolding-plan.md  visualizations.md
results/: final_summary.csv  final_summary.md
scripts/: bootstrap_runtime.sh  create_final_poster.py  run_matrix.sh  run_training_windows.ps1  validate_project.sh
tests/: helpers.py  test_analysis_results.py  test_artifacts.py  test_builders.py  test_config.py  test_dreamer.py  test_mock_grid.py  test_pommerman.py  test_ppo.py  test_progress.py  test_render.py  test_replay.py  test_smoke.py  test_visualization_tools.py
(+72 files in other folders)
