[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cs1470-multi-agent-dreamer"
version = "0.1.0"
description = "Scaffold for multi-agent Dreamer experiments in PyTorch."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gym>=0.10,<0.11",
  "jsonmerge>=1.9",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "ruamel.yaml>=0.18",
  "torch>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]
analysis = [
  "matplotlib>=3.8",
  "Pillow>=10.0",
]

[project.scripts]
madreamer-train = "madreamer.cli.train:main"
madreamer-eval = "madreamer.cli.eval:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
extend-exclude = ["third_party"]
